// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contains the supplied text in cardComponent 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CurrencyQuoteCard
    quotes={
      Array [
        Object {
          "currency": "BTC",
          "date": "20180507",
          "quotes": Array [
            Object {
              "price": "34.98",
              "time": "0915",
            },
            Object {
              "price": "36.13",
              "time": "1045",
            },
            Object {
              "price": "37.01",
              "time": "1230",
            },
            Object {
              "price": "35.98",
              "time": "1400",
            },
            Object {
              "price": "33.56",
              "time": "1530",
            },
          ],
        },
        Object {
          "currency": "ETC",
          "date": "20180507",
          "quotes": Array [
            Object {
              "price": "1.45",
              "time": "0900",
            },
            Object {
              "price": "1.87",
              "time": "1030",
            },
            Object {
              "price": "1.55",
              "time": "1245",
            },
            Object {
              "price": "2.01",
              "time": "1515",
            },
            Object {
              "price": "2.15",
              "time": "1700",
            },
          ],
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <WithStyles(Card)>
        <WithStyles(CardContent)>
          <WithStyles(Typography)
            className="CardHeading"
            color="primary"
            component="h2"
            gutterBottom={true}
            variant="h5"
          >
            07-May-2018
             
            <br />
            BTC
             
            <br />
          </WithStyles(Typography)>
          <WithStyles(Table)>
            <WithStyles(TableHead)>
              <WithStyles(TableRow)>
                <WithStyles(TableCell)>
                  BUY
                </WithStyles(TableCell)>
                <WithStyles(TableCell)>
                  SELL
                </WithStyles(TableCell)>
              </WithStyles(TableRow)>
            </WithStyles(TableHead)>
            <WithStyles(TableBody)>
              <WithStyles(TableRow)>
                <WithStyles(TableCell)>
                  $
                  34.98
                </WithStyles(TableCell)>
                <WithStyles(TableCell)>
                  $
                  37.01
                </WithStyles(TableCell)>
              </WithStyles(TableRow)>
              <WithStyles(TableRow)>
                <WithStyles(TableCell)>
                  9:15 AM
                </WithStyles(TableCell)>
                <WithStyles(TableCell)>
                  12:30 PM
                </WithStyles(TableCell)>
              </WithStyles(TableRow)>
            </WithStyles(TableBody)>
          </WithStyles(Table)>
          <br />
          <WithStyles(Typography)
            component="h3"
            gutterBottom={true}
            style={
              Object {
                "color": "teal",
              }
            }
            variant="h5"
          >
            <span>
              $Profit: 
              2.03
            </span>
          </WithStyles(Typography)>
        </WithStyles(CardContent)>
      </WithStyles(Card)>,
      "className": "Card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <WithStyles(CardContent)>
          <WithStyles(Typography)
            className="CardHeading"
            color="primary"
            component="h2"
            gutterBottom={true}
            variant="h5"
          >
            07-May-2018
             
            <br />
            BTC
             
            <br />
          </WithStyles(Typography)>
          <WithStyles(Table)>
            <WithStyles(TableHead)>
              <WithStyles(TableRow)>
                <WithStyles(TableCell)>
                  BUY
                </WithStyles(TableCell)>
                <WithStyles(TableCell)>
                  SELL
                </WithStyles(TableCell)>
              </WithStyles(TableRow)>
            </WithStyles(TableHead)>
            <WithStyles(TableBody)>
              <WithStyles(TableRow)>
                <WithStyles(TableCell)>
                  $
                  34.98
                </WithStyles(TableCell)>
                <WithStyles(TableCell)>
                  $
                  37.01
                </WithStyles(TableCell)>
              </WithStyles(TableRow)>
              <WithStyles(TableRow)>
                <WithStyles(TableCell)>
                  9:15 AM
                </WithStyles(TableCell)>
                <WithStyles(TableCell)>
                  12:30 PM
                </WithStyles(TableCell)>
              </WithStyles(TableRow)>
            </WithStyles(TableBody)>
          </WithStyles(Table)>
          <br />
          <WithStyles(Typography)
            component="h3"
            gutterBottom={true}
            style={
              Object {
                "color": "teal",
              }
            }
            variant="h5"
          >
            <span>
              $Profit: 
              2.03
            </span>
          </WithStyles(Typography)>
        </WithStyles(CardContent)>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(Typography)
              className="CardHeading"
              color="primary"
              component="h2"
              gutterBottom={true}
              variant="h5"
            >
              07-May-2018
               
              <br />
              BTC
               
              <br />
            </WithStyles(Typography)>,
            <WithStyles(Table)>
              <WithStyles(TableHead)>
                <WithStyles(TableRow)>
                  <WithStyles(TableCell)>
                    BUY
                  </WithStyles(TableCell)>
                  <WithStyles(TableCell)>
                    SELL
                  </WithStyles(TableCell)>
                </WithStyles(TableRow)>
              </WithStyles(TableHead)>
              <WithStyles(TableBody)>
                <WithStyles(TableRow)>
                  <WithStyles(TableCell)>
                    $
                    34.98
                  </WithStyles(TableCell)>
                  <WithStyles(TableCell)>
                    $
                    37.01
                  </WithStyles(TableCell)>
                </WithStyles(TableRow)>
                <WithStyles(TableRow)>
                  <WithStyles(TableCell)>
                    9:15 AM
                  </WithStyles(TableCell)>
                  <WithStyles(TableCell)>
                    12:30 PM
                  </WithStyles(TableCell)>
                </WithStyles(TableRow)>
              </WithStyles(TableBody)>
            </WithStyles(Table)>,
            <br />,
            <WithStyles(Typography)
              component="h3"
              gutterBottom={true}
              style={
                Object {
                  "color": "teal",
                }
              }
              variant="h5"
            >
              <span>
                $Profit: 
                2.03
              </span>
            </WithStyles(Typography)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "07-May-2018",
                " ",
                <br />,
                "BTC",
                " ",
                <br />,
              ],
              "className": "CardHeading",
              "color": "primary",
              "component": "h2",
              "gutterBottom": true,
              "variant": "h5",
            },
            "ref": null,
            "rendered": Array [
              "07-May-2018",
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              "BTC",
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <WithStyles(TableHead)>
                  <WithStyles(TableRow)>
                    <WithStyles(TableCell)>
                      BUY
                    </WithStyles(TableCell)>
                    <WithStyles(TableCell)>
                      SELL
                    </WithStyles(TableCell)>
                  </WithStyles(TableRow)>
                </WithStyles(TableHead)>,
                <WithStyles(TableBody)>
                  <WithStyles(TableRow)>
                    <WithStyles(TableCell)>
                      $
                      34.98
                    </WithStyles(TableCell)>
                    <WithStyles(TableCell)>
                      $
                      37.01
                    </WithStyles(TableCell)>
                  </WithStyles(TableRow)>
                  <WithStyles(TableRow)>
                    <WithStyles(TableCell)>
                      9:15 AM
                    </WithStyles(TableCell)>
                    <WithStyles(TableCell)>
                      12:30 PM
                    </WithStyles(TableCell)>
                  </WithStyles(TableRow)>
                </WithStyles(TableBody)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <WithStyles(TableRow)>
                    <WithStyles(TableCell)>
                      BUY
                    </WithStyles(TableCell)>
                    <WithStyles(TableCell)>
                      SELL
                    </WithStyles(TableCell)>
                  </WithStyles(TableRow)>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <WithStyles(TableCell)>
                        BUY
                      </WithStyles(TableCell)>,
                      <WithStyles(TableCell)>
                        SELL
                      </WithStyles(TableCell)>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "BUY",
                      },
                      "ref": null,
                      "rendered": "BUY",
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "SELL",
                      },
                      "ref": null,
                      "rendered": "SELL",
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <WithStyles(TableRow)>
                      <WithStyles(TableCell)>
                        $
                        34.98
                      </WithStyles(TableCell)>
                      <WithStyles(TableCell)>
                        $
                        37.01
                      </WithStyles(TableCell)>
                    </WithStyles(TableRow)>,
                    <WithStyles(TableRow)>
                      <WithStyles(TableCell)>
                        9:15 AM
                      </WithStyles(TableCell)>
                      <WithStyles(TableCell)>
                        12:30 PM
                      </WithStyles(TableCell)>
                    </WithStyles(TableRow)>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": Array [
                        <WithStyles(TableCell)>
                          $
                          34.98
                        </WithStyles(TableCell)>,
                        <WithStyles(TableCell)>
                          $
                          37.01
                        </WithStyles(TableCell)>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": Array [
                            "$",
                            "34.98",
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "$",
                          "34.98",
                        ],
                        "type": [Function],
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": Array [
                            "$",
                            "37.01",
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "$",
                          "37.01",
                        ],
                        "type": [Function],
                      },
                    ],
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": Array [
                        <WithStyles(TableCell)>
                          9:15 AM
                        </WithStyles(TableCell)>,
                        <WithStyles(TableCell)>
                          12:30 PM
                        </WithStyles(TableCell)>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": "9:15 AM",
                        },
                        "ref": null,
                        "rendered": "9:15 AM",
                        "type": [Function],
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": "12:30 PM",
                        },
                        "ref": null,
                        "rendered": "12:30 PM",
                        "type": [Function],
                      },
                    ],
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <span>
                $Profit: 
                2.03
              </span>,
              "component": "h3",
              "gutterBottom": true,
              "style": Object {
                "color": "teal",
              },
              "variant": "h5",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "$Profit: ",
                  "2.03",
                ],
              },
              "ref": null,
              "rendered": Array [
                "$Profit: ",
                "2.03",
              ],
              "type": "span",
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <WithStyles(Card)>
          <WithStyles(CardContent)>
            <WithStyles(Typography)
              className="CardHeading"
              color="primary"
              component="h2"
              gutterBottom={true}
              variant="h5"
            >
              07-May-2018
               
              <br />
              BTC
               
              <br />
            </WithStyles(Typography)>
            <WithStyles(Table)>
              <WithStyles(TableHead)>
                <WithStyles(TableRow)>
                  <WithStyles(TableCell)>
                    BUY
                  </WithStyles(TableCell)>
                  <WithStyles(TableCell)>
                    SELL
                  </WithStyles(TableCell)>
                </WithStyles(TableRow)>
              </WithStyles(TableHead)>
              <WithStyles(TableBody)>
                <WithStyles(TableRow)>
                  <WithStyles(TableCell)>
                    $
                    34.98
                  </WithStyles(TableCell)>
                  <WithStyles(TableCell)>
                    $
                    37.01
                  </WithStyles(TableCell)>
                </WithStyles(TableRow)>
                <WithStyles(TableRow)>
                  <WithStyles(TableCell)>
                    9:15 AM
                  </WithStyles(TableCell)>
                  <WithStyles(TableCell)>
                    12:30 PM
                  </WithStyles(TableCell)>
                </WithStyles(TableRow)>
              </WithStyles(TableBody)>
            </WithStyles(Table)>
            <br />
            <WithStyles(Typography)
              component="h3"
              gutterBottom={true}
              style={
                Object {
                  "color": "teal",
                }
              }
              variant="h5"
            >
              <span>
                $Profit: 
                2.03
              </span>
            </WithStyles(Typography)>
          </WithStyles(CardContent)>
        </WithStyles(Card)>,
        "className": "Card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <WithStyles(CardContent)>
            <WithStyles(Typography)
              className="CardHeading"
              color="primary"
              component="h2"
              gutterBottom={true}
              variant="h5"
            >
              07-May-2018
               
              <br />
              BTC
               
              <br />
            </WithStyles(Typography)>
            <WithStyles(Table)>
              <WithStyles(TableHead)>
                <WithStyles(TableRow)>
                  <WithStyles(TableCell)>
                    BUY
                  </WithStyles(TableCell)>
                  <WithStyles(TableCell)>
                    SELL
                  </WithStyles(TableCell)>
                </WithStyles(TableRow)>
              </WithStyles(TableHead)>
              <WithStyles(TableBody)>
                <WithStyles(TableRow)>
                  <WithStyles(TableCell)>
                    $
                    34.98
                  </WithStyles(TableCell)>
                  <WithStyles(TableCell)>
                    $
                    37.01
                  </WithStyles(TableCell)>
                </WithStyles(TableRow)>
                <WithStyles(TableRow)>
                  <WithStyles(TableCell)>
                    9:15 AM
                  </WithStyles(TableCell)>
                  <WithStyles(TableCell)>
                    12:30 PM
                  </WithStyles(TableCell)>
                </WithStyles(TableRow)>
              </WithStyles(TableBody)>
            </WithStyles(Table)>
            <br />
            <WithStyles(Typography)
              component="h3"
              gutterBottom={true}
              style={
                Object {
                  "color": "teal",
                }
              }
              variant="h5"
            >
              <span>
                $Profit: 
                2.03
              </span>
            </WithStyles(Typography)>
          </WithStyles(CardContent)>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(Typography)
                className="CardHeading"
                color="primary"
                component="h2"
                gutterBottom={true}
                variant="h5"
              >
                07-May-2018
                 
                <br />
                BTC
                 
                <br />
              </WithStyles(Typography)>,
              <WithStyles(Table)>
                <WithStyles(TableHead)>
                  <WithStyles(TableRow)>
                    <WithStyles(TableCell)>
                      BUY
                    </WithStyles(TableCell)>
                    <WithStyles(TableCell)>
                      SELL
                    </WithStyles(TableCell)>
                  </WithStyles(TableRow)>
                </WithStyles(TableHead)>
                <WithStyles(TableBody)>
                  <WithStyles(TableRow)>
                    <WithStyles(TableCell)>
                      $
                      34.98
                    </WithStyles(TableCell)>
                    <WithStyles(TableCell)>
                      $
                      37.01
                    </WithStyles(TableCell)>
                  </WithStyles(TableRow)>
                  <WithStyles(TableRow)>
                    <WithStyles(TableCell)>
                      9:15 AM
                    </WithStyles(TableCell)>
                    <WithStyles(TableCell)>
                      12:30 PM
                    </WithStyles(TableCell)>
                  </WithStyles(TableRow)>
                </WithStyles(TableBody)>
              </WithStyles(Table)>,
              <br />,
              <WithStyles(Typography)
                component="h3"
                gutterBottom={true}
                style={
                  Object {
                    "color": "teal",
                  }
                }
                variant="h5"
              >
                <span>
                  $Profit: 
                  2.03
                </span>
              </WithStyles(Typography)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "07-May-2018",
                  " ",
                  <br />,
                  "BTC",
                  " ",
                  <br />,
                ],
                "className": "CardHeading",
                "color": "primary",
                "component": "h2",
                "gutterBottom": true,
                "variant": "h5",
              },
              "ref": null,
              "rendered": Array [
                "07-May-2018",
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                "BTC",
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <WithStyles(TableHead)>
                    <WithStyles(TableRow)>
                      <WithStyles(TableCell)>
                        BUY
                      </WithStyles(TableCell)>
                      <WithStyles(TableCell)>
                        SELL
                      </WithStyles(TableCell)>
                    </WithStyles(TableRow)>
                  </WithStyles(TableHead)>,
                  <WithStyles(TableBody)>
                    <WithStyles(TableRow)>
                      <WithStyles(TableCell)>
                        $
                        34.98
                      </WithStyles(TableCell)>
                      <WithStyles(TableCell)>
                        $
                        37.01
                      </WithStyles(TableCell)>
                    </WithStyles(TableRow)>
                    <WithStyles(TableRow)>
                      <WithStyles(TableCell)>
                        9:15 AM
                      </WithStyles(TableCell)>
                      <WithStyles(TableCell)>
                        12:30 PM
                      </WithStyles(TableCell)>
                    </WithStyles(TableRow)>
                  </WithStyles(TableBody)>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <WithStyles(TableRow)>
                      <WithStyles(TableCell)>
                        BUY
                      </WithStyles(TableCell)>
                      <WithStyles(TableCell)>
                        SELL
                      </WithStyles(TableCell)>
                    </WithStyles(TableRow)>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": Array [
                        <WithStyles(TableCell)>
                          BUY
                        </WithStyles(TableCell)>,
                        <WithStyles(TableCell)>
                          SELL
                        </WithStyles(TableCell)>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": "BUY",
                        },
                        "ref": null,
                        "rendered": "BUY",
                        "type": [Function],
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": "SELL",
                        },
                        "ref": null,
                        "rendered": "SELL",
                        "type": [Function],
                      },
                    ],
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <WithStyles(TableRow)>
                        <WithStyles(TableCell)>
                          $
                          34.98
                        </WithStyles(TableCell)>
                        <WithStyles(TableCell)>
                          $
                          37.01
                        </WithStyles(TableCell)>
                      </WithStyles(TableRow)>,
                      <WithStyles(TableRow)>
                        <WithStyles(TableCell)>
                          9:15 AM
                        </WithStyles(TableCell)>
                        <WithStyles(TableCell)>
                          12:30 PM
                        </WithStyles(TableCell)>
                      </WithStyles(TableRow)>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": Array [
                          <WithStyles(TableCell)>
                            $
                            34.98
                          </WithStyles(TableCell)>,
                          <WithStyles(TableCell)>
                            $
                            37.01
                          </WithStyles(TableCell)>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "class",
                          "props": Object {
                            "children": Array [
                              "$",
                              "34.98",
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            "$",
                            "34.98",
                          ],
                          "type": [Function],
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "class",
                          "props": Object {
                            "children": Array [
                              "$",
                              "37.01",
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            "$",
                            "37.01",
                          ],
                          "type": [Function],
                        },
                      ],
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": Array [
                          <WithStyles(TableCell)>
                            9:15 AM
                          </WithStyles(TableCell)>,
                          <WithStyles(TableCell)>
                            12:30 PM
                          </WithStyles(TableCell)>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "class",
                          "props": Object {
                            "children": "9:15 AM",
                          },
                          "ref": null,
                          "rendered": "9:15 AM",
                          "type": [Function],
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "class",
                          "props": Object {
                            "children": "12:30 PM",
                          },
                          "ref": null,
                          "rendered": "12:30 PM",
                          "type": [Function],
                        },
                      ],
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <span>
                  $Profit: 
                  2.03
                </span>,
                "component": "h3",
                "gutterBottom": true,
                "style": Object {
                  "color": "teal",
                },
                "variant": "h5",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "$Profit: ",
                    "2.03",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "$Profit: ",
                  "2.03",
                ],
                "type": "span",
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <WithStyles(CssBaseline) />,
        <div
          className="App"
        >
          <WithStyles(AppBar)
            position="static"
            style={
              Object {
                "alignItems": "center",
                "display": "top",
              }
            }
          >
            <WithStyles(Toolbar)>
              <pure(MoneyIcon) />
              <WithStyles(Typography)
                color="inherit"
                noWrap={true}
                variant="h6"
              >
                Crypto-Analyzer
              </WithStyles(Typography)>
            </WithStyles(Toolbar)>
          </WithStyles(AppBar)>
          <header
            className="App-header"
          >
            <div
              className="CardContainer"
            >
              <CurrencyQuoteCard
                quotes={
                  Array [
                    Object {
                      "currency": "BTC",
                      "date": "20180507",
                      "quotes": Array [
                        Object {
                          "price": "34.98",
                          "time": "0915",
                        },
                        Object {
                          "price": "36.13",
                          "time": "1045",
                        },
                        Object {
                          "price": "37.01",
                          "time": "1230",
                        },
                        Object {
                          "price": "35.98",
                          "time": "1400",
                        },
                        Object {
                          "price": "39.56",
                          "time": "1530",
                        },
                      ],
                    },
                  ]
                }
              />
              <CurrencyQuoteCard
                quotes={
                  Array [
                    Object {
                      "currency": "ETC",
                      "date": "20180507",
                      "quotes": Array [
                        Object {
                          "price": "1.45",
                          "time": "0900",
                        },
                        Object {
                          "price": "0.1",
                          "time": "1030",
                        },
                        Object {
                          "price": "0",
                          "time": "1245",
                        },
                        Object {
                          "price": "0",
                          "time": "1515",
                        },
                        Object {
                          "price": "0",
                          "time": "1700",
                        },
                      ],
                    },
                  ]
                }
              />
              <CurrencyQuoteCard
                quotes={
                  Array [
                    Object {
                      "currency": "LTC",
                      "date": "20180507",
                      "quotes": Array [
                        Object {
                          "price": "14.32",
                          "time": "0930",
                        },
                        Object {
                          "price": "14.87",
                          "time": "1115",
                        },
                        Object {
                          "price": "15.03",
                          "time": "1245",
                        },
                        Object {
                          "price": "14.76",
                          "time": "1400",
                        },
                        Object {
                          "price": "14.15",
                          "time": "1700",
                        },
                      ],
                    },
                  ]
                }
              />
            </div>
          </header>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <WithStyles(AppBar)
              position="static"
              style={
                Object {
                  "alignItems": "center",
                  "display": "top",
                }
              }
            >
              <WithStyles(Toolbar)>
                <pure(MoneyIcon) />
                <WithStyles(Typography)
                  color="inherit"
                  noWrap={true}
                  variant="h6"
                >
                  Crypto-Analyzer
                </WithStyles(Typography)>
              </WithStyles(Toolbar)>
            </WithStyles(AppBar)>,
            <header
              className="App-header"
            >
              <div
                className="CardContainer"
              >
                <CurrencyQuoteCard
                  quotes={
                    Array [
                      Object {
                        "currency": "BTC",
                        "date": "20180507",
                        "quotes": Array [
                          Object {
                            "price": "34.98",
                            "time": "0915",
                          },
                          Object {
                            "price": "36.13",
                            "time": "1045",
                          },
                          Object {
                            "price": "37.01",
                            "time": "1230",
                          },
                          Object {
                            "price": "35.98",
                            "time": "1400",
                          },
                          Object {
                            "price": "39.56",
                            "time": "1530",
                          },
                        ],
                      },
                    ]
                  }
                />
                <CurrencyQuoteCard
                  quotes={
                    Array [
                      Object {
                        "currency": "ETC",
                        "date": "20180507",
                        "quotes": Array [
                          Object {
                            "price": "1.45",
                            "time": "0900",
                          },
                          Object {
                            "price": "0.1",
                            "time": "1030",
                          },
                          Object {
                            "price": "0",
                            "time": "1245",
                          },
                          Object {
                            "price": "0",
                            "time": "1515",
                          },
                          Object {
                            "price": "0",
                            "time": "1700",
                          },
                        ],
                      },
                    ]
                  }
                />
                <CurrencyQuoteCard
                  quotes={
                    Array [
                      Object {
                        "currency": "LTC",
                        "date": "20180507",
                        "quotes": Array [
                          Object {
                            "price": "14.32",
                            "time": "0930",
                          },
                          Object {
                            "price": "14.87",
                            "time": "1115",
                          },
                          Object {
                            "price": "15.03",
                            "time": "1245",
                          },
                          Object {
                            "price": "14.76",
                            "time": "1400",
                          },
                          Object {
                            "price": "14.15",
                            "time": "1700",
                          },
                        ],
                      },
                    ]
                  }
                />
              </div>
            </header>,
          ],
          "className": "App",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <WithStyles(Toolbar)>
                <pure(MoneyIcon) />
                <WithStyles(Typography)
                  color="inherit"
                  noWrap={true}
                  variant="h6"
                >
                  Crypto-Analyzer
                </WithStyles(Typography)>
              </WithStyles(Toolbar)>,
              "position": "static",
              "style": Object {
                "alignItems": "center",
                "display": "top",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <pure(MoneyIcon) />,
                  <WithStyles(Typography)
                    color="inherit"
                    noWrap={true}
                    variant="h6"
                  >
                    Crypto-Analyzer
                  </WithStyles(Typography)>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Crypto-Analyzer",
                    "color": "inherit",
                    "noWrap": true,
                    "variant": "h6",
                  },
                  "ref": null,
                  "rendered": "Crypto-Analyzer",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="CardContainer"
              >
                <CurrencyQuoteCard
                  quotes={
                    Array [
                      Object {
                        "currency": "BTC",
                        "date": "20180507",
                        "quotes": Array [
                          Object {
                            "price": "34.98",
                            "time": "0915",
                          },
                          Object {
                            "price": "36.13",
                            "time": "1045",
                          },
                          Object {
                            "price": "37.01",
                            "time": "1230",
                          },
                          Object {
                            "price": "35.98",
                            "time": "1400",
                          },
                          Object {
                            "price": "39.56",
                            "time": "1530",
                          },
                        ],
                      },
                    ]
                  }
                />
                <CurrencyQuoteCard
                  quotes={
                    Array [
                      Object {
                        "currency": "ETC",
                        "date": "20180507",
                        "quotes": Array [
                          Object {
                            "price": "1.45",
                            "time": "0900",
                          },
                          Object {
                            "price": "0.1",
                            "time": "1030",
                          },
                          Object {
                            "price": "0",
                            "time": "1245",
                          },
                          Object {
                            "price": "0",
                            "time": "1515",
                          },
                          Object {
                            "price": "0",
                            "time": "1700",
                          },
                        ],
                      },
                    ]
                  }
                />
                <CurrencyQuoteCard
                  quotes={
                    Array [
                      Object {
                        "currency": "LTC",
                        "date": "20180507",
                        "quotes": Array [
                          Object {
                            "price": "14.32",
                            "time": "0930",
                          },
                          Object {
                            "price": "14.87",
                            "time": "1115",
                          },
                          Object {
                            "price": "15.03",
                            "time": "1245",
                          },
                          Object {
                            "price": "14.76",
                            "time": "1400",
                          },
                          Object {
                            "price": "14.15",
                            "time": "1700",
                          },
                        ],
                      },
                    ]
                  }
                />
              </div>,
              "className": "App-header",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <CurrencyQuoteCard
                    quotes={
                      Array [
                        Object {
                          "currency": "BTC",
                          "date": "20180507",
                          "quotes": Array [
                            Object {
                              "price": "34.98",
                              "time": "0915",
                            },
                            Object {
                              "price": "36.13",
                              "time": "1045",
                            },
                            Object {
                              "price": "37.01",
                              "time": "1230",
                            },
                            Object {
                              "price": "35.98",
                              "time": "1400",
                            },
                            Object {
                              "price": "39.56",
                              "time": "1530",
                            },
                          ],
                        },
                      ]
                    }
                  />,
                  <CurrencyQuoteCard
                    quotes={
                      Array [
                        Object {
                          "currency": "ETC",
                          "date": "20180507",
                          "quotes": Array [
                            Object {
                              "price": "1.45",
                              "time": "0900",
                            },
                            Object {
                              "price": "0.1",
                              "time": "1030",
                            },
                            Object {
                              "price": "0",
                              "time": "1245",
                            },
                            Object {
                              "price": "0",
                              "time": "1515",
                            },
                            Object {
                              "price": "0",
                              "time": "1700",
                            },
                          ],
                        },
                      ]
                    }
                  />,
                  <CurrencyQuoteCard
                    quotes={
                      Array [
                        Object {
                          "currency": "LTC",
                          "date": "20180507",
                          "quotes": Array [
                            Object {
                              "price": "14.32",
                              "time": "0930",
                            },
                            Object {
                              "price": "14.87",
                              "time": "1115",
                            },
                            Object {
                              "price": "15.03",
                              "time": "1245",
                            },
                            Object {
                              "price": "14.76",
                              "time": "1400",
                            },
                            Object {
                              "price": "14.15",
                              "time": "1700",
                            },
                          ],
                        },
                      ]
                    }
                  />,
                ],
                "className": "CardContainer",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "BTC",
                  "nodeType": "class",
                  "props": Object {
                    "quotes": Array [
                      Object {
                        "currency": "BTC",
                        "date": "20180507",
                        "quotes": Array [
                          Object {
                            "price": "34.98",
                            "time": "0915",
                          },
                          Object {
                            "price": "36.13",
                            "time": "1045",
                          },
                          Object {
                            "price": "37.01",
                            "time": "1230",
                          },
                          Object {
                            "price": "35.98",
                            "time": "1400",
                          },
                          Object {
                            "price": "39.56",
                            "time": "1530",
                          },
                        ],
                      },
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "ETC",
                  "nodeType": "class",
                  "props": Object {
                    "quotes": Array [
                      Object {
                        "currency": "ETC",
                        "date": "20180507",
                        "quotes": Array [
                          Object {
                            "price": "1.45",
                            "time": "0900",
                          },
                          Object {
                            "price": "0.1",
                            "time": "1030",
                          },
                          Object {
                            "price": "0",
                            "time": "1245",
                          },
                          Object {
                            "price": "0",
                            "time": "1515",
                          },
                          Object {
                            "price": "0",
                            "time": "1700",
                          },
                        ],
                      },
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "LTC",
                  "nodeType": "class",
                  "props": Object {
                    "quotes": Array [
                      Object {
                        "currency": "LTC",
                        "date": "20180507",
                        "quotes": Array [
                          Object {
                            "price": "14.32",
                            "time": "0930",
                          },
                          Object {
                            "price": "14.87",
                            "time": "1115",
                          },
                          Object {
                            "price": "15.03",
                            "time": "1245",
                          },
                          Object {
                            "price": "14.76",
                            "time": "1400",
                          },
                          Object {
                            "price": "14.15",
                            "time": "1700",
                          },
                        ],
                      },
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "header",
          },
        ],
        "type": "div",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <WithStyles(CssBaseline) />,
          <div
            className="App"
          >
            <WithStyles(AppBar)
              position="static"
              style={
                Object {
                  "alignItems": "center",
                  "display": "top",
                }
              }
            >
              <WithStyles(Toolbar)>
                <pure(MoneyIcon) />
                <WithStyles(Typography)
                  color="inherit"
                  noWrap={true}
                  variant="h6"
                >
                  Crypto-Analyzer
                </WithStyles(Typography)>
              </WithStyles(Toolbar)>
            </WithStyles(AppBar)>
            <header
              className="App-header"
            >
              <div
                className="CardContainer"
              >
                <CurrencyQuoteCard
                  quotes={
                    Array [
                      Object {
                        "currency": "BTC",
                        "date": "20180507",
                        "quotes": Array [
                          Object {
                            "price": "34.98",
                            "time": "0915",
                          },
                          Object {
                            "price": "36.13",
                            "time": "1045",
                          },
                          Object {
                            "price": "37.01",
                            "time": "1230",
                          },
                          Object {
                            "price": "35.98",
                            "time": "1400",
                          },
                          Object {
                            "price": "39.56",
                            "time": "1530",
                          },
                        ],
                      },
                    ]
                  }
                />
                <CurrencyQuoteCard
                  quotes={
                    Array [
                      Object {
                        "currency": "ETC",
                        "date": "20180507",
                        "quotes": Array [
                          Object {
                            "price": "1.45",
                            "time": "0900",
                          },
                          Object {
                            "price": "0.1",
                            "time": "1030",
                          },
                          Object {
                            "price": "0",
                            "time": "1245",
                          },
                          Object {
                            "price": "0",
                            "time": "1515",
                          },
                          Object {
                            "price": "0",
                            "time": "1700",
                          },
                        ],
                      },
                    ]
                  }
                />
                <CurrencyQuoteCard
                  quotes={
                    Array [
                      Object {
                        "currency": "LTC",
                        "date": "20180507",
                        "quotes": Array [
                          Object {
                            "price": "14.32",
                            "time": "0930",
                          },
                          Object {
                            "price": "14.87",
                            "time": "1115",
                          },
                          Object {
                            "price": "15.03",
                            "time": "1245",
                          },
                          Object {
                            "price": "14.76",
                            "time": "1400",
                          },
                          Object {
                            "price": "14.15",
                            "time": "1700",
                          },
                        ],
                      },
                    ]
                  }
                />
              </div>
            </header>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <WithStyles(AppBar)
                position="static"
                style={
                  Object {
                    "alignItems": "center",
                    "display": "top",
                  }
                }
              >
                <WithStyles(Toolbar)>
                  <pure(MoneyIcon) />
                  <WithStyles(Typography)
                    color="inherit"
                    noWrap={true}
                    variant="h6"
                  >
                    Crypto-Analyzer
                  </WithStyles(Typography)>
                </WithStyles(Toolbar)>
              </WithStyles(AppBar)>,
              <header
                className="App-header"
              >
                <div
                  className="CardContainer"
                >
                  <CurrencyQuoteCard
                    quotes={
                      Array [
                        Object {
                          "currency": "BTC",
                          "date": "20180507",
                          "quotes": Array [
                            Object {
                              "price": "34.98",
                              "time": "0915",
                            },
                            Object {
                              "price": "36.13",
                              "time": "1045",
                            },
                            Object {
                              "price": "37.01",
                              "time": "1230",
                            },
                            Object {
                              "price": "35.98",
                              "time": "1400",
                            },
                            Object {
                              "price": "39.56",
                              "time": "1530",
                            },
                          ],
                        },
                      ]
                    }
                  />
                  <CurrencyQuoteCard
                    quotes={
                      Array [
                        Object {
                          "currency": "ETC",
                          "date": "20180507",
                          "quotes": Array [
                            Object {
                              "price": "1.45",
                              "time": "0900",
                            },
                            Object {
                              "price": "0.1",
                              "time": "1030",
                            },
                            Object {
                              "price": "0",
                              "time": "1245",
                            },
                            Object {
                              "price": "0",
                              "time": "1515",
                            },
                            Object {
                              "price": "0",
                              "time": "1700",
                            },
                          ],
                        },
                      ]
                    }
                  />
                  <CurrencyQuoteCard
                    quotes={
                      Array [
                        Object {
                          "currency": "LTC",
                          "date": "20180507",
                          "quotes": Array [
                            Object {
                              "price": "14.32",
                              "time": "0930",
                            },
                            Object {
                              "price": "14.87",
                              "time": "1115",
                            },
                            Object {
                              "price": "15.03",
                              "time": "1245",
                            },
                            Object {
                              "price": "14.76",
                              "time": "1400",
                            },
                            Object {
                              "price": "14.15",
                              "time": "1700",
                            },
                          ],
                        },
                      ]
                    }
                  />
                </div>
              </header>,
            ],
            "className": "App",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <WithStyles(Toolbar)>
                  <pure(MoneyIcon) />
                  <WithStyles(Typography)
                    color="inherit"
                    noWrap={true}
                    variant="h6"
                  >
                    Crypto-Analyzer
                  </WithStyles(Typography)>
                </WithStyles(Toolbar)>,
                "position": "static",
                "style": Object {
                  "alignItems": "center",
                  "display": "top",
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <pure(MoneyIcon) />,
                    <WithStyles(Typography)
                      color="inherit"
                      noWrap={true}
                      variant="h6"
                    >
                      Crypto-Analyzer
                    </WithStyles(Typography)>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Crypto-Analyzer",
                      "color": "inherit",
                      "noWrap": true,
                      "variant": "h6",
                    },
                    "ref": null,
                    "rendered": "Crypto-Analyzer",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="CardContainer"
                >
                  <CurrencyQuoteCard
                    quotes={
                      Array [
                        Object {
                          "currency": "BTC",
                          "date": "20180507",
                          "quotes": Array [
                            Object {
                              "price": "34.98",
                              "time": "0915",
                            },
                            Object {
                              "price": "36.13",
                              "time": "1045",
                            },
                            Object {
                              "price": "37.01",
                              "time": "1230",
                            },
                            Object {
                              "price": "35.98",
                              "time": "1400",
                            },
                            Object {
                              "price": "39.56",
                              "time": "1530",
                            },
                          ],
                        },
                      ]
                    }
                  />
                  <CurrencyQuoteCard
                    quotes={
                      Array [
                        Object {
                          "currency": "ETC",
                          "date": "20180507",
                          "quotes": Array [
                            Object {
                              "price": "1.45",
                              "time": "0900",
                            },
                            Object {
                              "price": "0.1",
                              "time": "1030",
                            },
                            Object {
                              "price": "0",
                              "time": "1245",
                            },
                            Object {
                              "price": "0",
                              "time": "1515",
                            },
                            Object {
                              "price": "0",
                              "time": "1700",
                            },
                          ],
                        },
                      ]
                    }
                  />
                  <CurrencyQuoteCard
                    quotes={
                      Array [
                        Object {
                          "currency": "LTC",
                          "date": "20180507",
                          "quotes": Array [
                            Object {
                              "price": "14.32",
                              "time": "0930",
                            },
                            Object {
                              "price": "14.87",
                              "time": "1115",
                            },
                            Object {
                              "price": "15.03",
                              "time": "1245",
                            },
                            Object {
                              "price": "14.76",
                              "time": "1400",
                            },
                            Object {
                              "price": "14.15",
                              "time": "1700",
                            },
                          ],
                        },
                      ]
                    }
                  />
                </div>,
                "className": "App-header",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <CurrencyQuoteCard
                      quotes={
                        Array [
                          Object {
                            "currency": "BTC",
                            "date": "20180507",
                            "quotes": Array [
                              Object {
                                "price": "34.98",
                                "time": "0915",
                              },
                              Object {
                                "price": "36.13",
                                "time": "1045",
                              },
                              Object {
                                "price": "37.01",
                                "time": "1230",
                              },
                              Object {
                                "price": "35.98",
                                "time": "1400",
                              },
                              Object {
                                "price": "39.56",
                                "time": "1530",
                              },
                            ],
                          },
                        ]
                      }
                    />,
                    <CurrencyQuoteCard
                      quotes={
                        Array [
                          Object {
                            "currency": "ETC",
                            "date": "20180507",
                            "quotes": Array [
                              Object {
                                "price": "1.45",
                                "time": "0900",
                              },
                              Object {
                                "price": "0.1",
                                "time": "1030",
                              },
                              Object {
                                "price": "0",
                                "time": "1245",
                              },
                              Object {
                                "price": "0",
                                "time": "1515",
                              },
                              Object {
                                "price": "0",
                                "time": "1700",
                              },
                            ],
                          },
                        ]
                      }
                    />,
                    <CurrencyQuoteCard
                      quotes={
                        Array [
                          Object {
                            "currency": "LTC",
                            "date": "20180507",
                            "quotes": Array [
                              Object {
                                "price": "14.32",
                                "time": "0930",
                              },
                              Object {
                                "price": "14.87",
                                "time": "1115",
                              },
                              Object {
                                "price": "15.03",
                                "time": "1245",
                              },
                              Object {
                                "price": "14.76",
                                "time": "1400",
                              },
                              Object {
                                "price": "14.15",
                                "time": "1700",
                              },
                            ],
                          },
                        ]
                      }
                    />,
                  ],
                  "className": "CardContainer",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "BTC",
                    "nodeType": "class",
                    "props": Object {
                      "quotes": Array [
                        Object {
                          "currency": "BTC",
                          "date": "20180507",
                          "quotes": Array [
                            Object {
                              "price": "34.98",
                              "time": "0915",
                            },
                            Object {
                              "price": "36.13",
                              "time": "1045",
                            },
                            Object {
                              "price": "37.01",
                              "time": "1230",
                            },
                            Object {
                              "price": "35.98",
                              "time": "1400",
                            },
                            Object {
                              "price": "39.56",
                              "time": "1530",
                            },
                          ],
                        },
                      ],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "ETC",
                    "nodeType": "class",
                    "props": Object {
                      "quotes": Array [
                        Object {
                          "currency": "ETC",
                          "date": "20180507",
                          "quotes": Array [
                            Object {
                              "price": "1.45",
                              "time": "0900",
                            },
                            Object {
                              "price": "0.1",
                              "time": "1030",
                            },
                            Object {
                              "price": "0",
                              "time": "1245",
                            },
                            Object {
                              "price": "0",
                              "time": "1515",
                            },
                            Object {
                              "price": "0",
                              "time": "1700",
                            },
                          ],
                        },
                      ],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "LTC",
                    "nodeType": "class",
                    "props": Object {
                      "quotes": Array [
                        Object {
                          "currency": "LTC",
                          "date": "20180507",
                          "quotes": Array [
                            Object {
                              "price": "14.32",
                              "time": "0930",
                            },
                            Object {
                              "price": "14.87",
                              "time": "1115",
                            },
                            Object {
                              "price": "15.03",
                              "time": "1245",
                            },
                            Object {
                              "price": "14.76",
                              "time": "1400",
                            },
                            Object {
                              "price": "14.15",
                              "time": "1700",
                            },
                          ],
                        },
                      ],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              "type": "header",
            },
          ],
          "type": "div",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
